...
    modifier: Modifier = Modifier,
    contentPadding: PaddingValues = PaddingValues(0.dp)
) {
    LazyColumn(
        modifier = modifier
            .fillMaxWidth()
            .testTag("AppPageList")
    ) {
        item {
            TitleCard(appDetails)
        }

        item {
...
            item {
                Box(
                    modifier = modifier
                        .fillMaxWidth()
                        .background(MaterialTheme.colorScheme.outline)
                ) {
                    ScreenshotsRow(
                        appDetails = appDetails,
                        navigateScreenshot = navigateScreenshot,
                        onScreenshotSelect = onScreenshotSelect
                    )
                }
            }
...
        Box(
            modifier = Modifier
                .fillMaxWidth()
                .background(MaterialTheme.colorScheme.inversePrimary)
        ) {
            Text(
                text = "SCREENSHOTS",
                fontWeight = FontWeight.Bold,
                fontSize = 18.sp,
                color = MaterialTheme.colorScheme.onPrimaryContainer,
                modifier = Modifier.padding(horizontal = 12.dp, vertical = 4.dp)
            )
        }
...
            modifier = modifier.padding(horizontal = 12.dp)
        )

        LazyRow(
            state = listState,
            modifier = Modifier
                .testTag("GenresList")
                .padding(horizontal = 8.dp)
                .fillMaxWidth()
                .horizontalScrollbar(
                    listState = listState,
                    color = MaterialTheme.colorScheme.outline
                ),
...
            modifier = modifier.padding(horizontal = 12.dp)
        )

        LazyRow(
            state = listState,
            modifier = Modifier
                .testTag("TagsList")
                .padding(horizontal = 8.dp)
                .fillMaxWidth()
                .horizontalScrollbar(
                    listState = listState,
                    color = MaterialTheme.colorScheme.outline
                ),
...
