...
                onDone = {
                    keyboardController?.hide()
                    onSearch(query)
                    navigateSearch()
                }
            ),
            placeholder = { Text("Search the Steam Store") },
            singleLine = true,
            leadingIcon = {
                Icon(
                    Icons.Filled.Menu,
                    contentDescription = "Menu Icon",
                    modifier = Modifier.padding(PaddingValues(10.dp, 0.dp, 0.dp, 0.dp))
...
