...
    navigateApp: () -> Unit,
    onAppSelect: (appId: Int) -> Unit,
    showTopSellers: Boolean,
    modifier: Modifier = Modifier,
    contentPadding: PaddingValues = PaddingValues(0.dp)
) {
    FeaturedGamesList(
        featuredCategories = featuredCategories,
        navigateApp = navigateApp,
        onAppSelect = onAppSelect,
        showTopSellers = showTopSellers,
        modifier = modifier,
        contentPadding = contentPadding
...
